# tauri-uniart

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  mise.toml  package-lock.json  package.json  vite.config.ts
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: windows-candidate.yml
docs/: compatible-release-gate.md  github-prerelease-template.md  github-release-assets.md  windows-beta.md  windows-installer-validation.md
scripts/: build-nsis-upgrade-fixture.ps1  prepare-compatible-evidence.ps1  prepare-github-release-assets.ps1  prepare-windows-sandbox.ps1  smoke-nsis-installer.ps1  verify-release-contract.mjs
src/: fileWorkspace.ts  main.ts  project.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: project.test.ts
