[package]
name = "tauri-uniart"
version = "0.1.0-beta.1"
description = "UnicodeArt App desktop workspace built with Tauri"
authors = ["mandolin"]
license = "MIT"
repository = "https://github.com/mandolin/tauri-uniart"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_uniart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
